<resources>
    <string name="app_name">prog7313_poe_part2</string>
    <string name="no_account_sign_up_here">No Account? Sign up here</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="recent_activity">RECENT ACTIVITY</string>
    <string name="download">Download</string>
    <string name="upload">Upload</string>
    <string name="oct_01_2023">Oct 01, 2023</string>
    <string name="xlsx">XLSX</string>
    <string name="csv">CSV</string>
    <string name="pdf">PDF</string>
    <string name="xlsx1">XLSX</string>
    <string name="csv1">CSV</string>
    <string name="pdf1">PDF</string>
    <string name="standard_monthly_report">Standard Monthly Report</string>
    <string name="october_2023">October 2023</string>
    <string name="oct_31_2023">Oct 31, 2023</string>
    <string name="statements">Statements</string>
    <string name="formats">FORMATS:</string>
    <string name="time_period">TIME PERIOD</string>
    <string name="search">Search</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="closed_nav">Open Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="take_photo">Take Photo</string>
    <string name="enter_the_maximum_goal">Enter the maximum goal</string>
    <string name="enter_the_minimum_goal">Enter the minimum goal</string>
    <string name="goals">Goals</string>
    <string name="save">Save</string>

    <string name="create_new_account">Create New Account</string>
    <string name="create_new">Create New</string>
    <string name="budgetbee">BudgetBee</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_click_here_to_login">Already have an account? Click here to login</string>

    <string name="welcome">Welcome!</string>
    <string name="download_statement">Download Statement</string>
    <string name="expense_entry">Expense Entry</string>
    <string name="category_amounts">Category Amounts</string>
    <string name="progress_dashboard">Progress Dashboard</string>
    <string name="current_balance_123456_00">Current Balance 123456.00</string>
    <string name="logged_in_as_user">LOGGED IN AS: User</string>
    <string name="home">HOME</string>
    <string name="stats">STATS</string>
    <string name="add">Add</string>
    <string name="add_budget">ADD BUDGET</string>
    <string name="settings">SETTINGS</string>
    <string name="rewards">REWARDS</string>
    <string name="Rewards">Rewards</string>
    <string name="wallet">WALLET</string>
    <string name="search_expenses">Expense Search</string>
    <string name="enter_a_start_date">Enter a start date</string>
    <string name="enter_an_end_date">Enter an end date</string>
    <string name="no_results_found">No results found</string>
    <string name="user_goals">User Goals</string>
    <string name="add_profile">Add Profile Picture</string>
</resources>